get details sub post
