# pkg/admin/handler/subPost.go
@@ -18,6 +18,8 @@ import (
 type SubPostInterface interface {
 	Create(c echo.Context) error
 	GetList(c echo.Context) error
+	Update(c echo.Context) error
+	GetDetail(c echo.Context) error
 }
 
 // ParPosts ...
@@ -87,6 +89,60 @@ func (p subPostImpl) GetList(c echo.Context) error {
 	}
 
 	data, err := s.GetList(ctx, query, id)
+	if err != nil {
+		return cc.Response400(nil, err.Error())
+	}
+	return cc.Response200(data, "")
+}
+
+// Create godoc
+// @tags SubPost
+// @summary Update
+// @id subPost-update
+// @security ApiKeyAuth
+// @accept json
+// @produce json
+// @param payload body request.SubPostUpdate true "Payload"
+// @param id path string true "id"
+// @success 200 {object} nil
+// @router /subPost/{id} [put]
+func (p subPostImpl) Update(c echo.Context) error {
+	var (
+		cc   = echocustom.EchoGetCustomCtx(c)
+		ctx  = cc.GetRequestCtx()
+		body = cc.Get(constants.KeyPayload).(request.SubPostUpdate)
+		s    = servicesubpost.SubPost()
+		id   = cc.Get("id").(modelmg.AppID)
+	)
+	if !config.CheckAuthen(body.Pass) {
+		return cc.ResponseErr(nil, http.StatusUnauthorized, nil, "Unauthorized")
+
+	}
+	if err := s.Update(ctx, body, id); err != nil {
+		return cc.ResponseErr(nil, http.StatusBadRequest, err, err.Error())
+	}
+	return cc.Response200(nil, "")
+}
+
+// Create godoc
+// @tags SubPost
+// @summary GetDetail
+// @id subPost-get-detail
+// @security ApiKeyAuth
+// @accept json
+// @produce json
+// @param id path string true "id"
+// @success 200 {object} nil
+// @router /subPost/detail/{id} [get]
+func (p subPostImpl) GetDetail(c echo.Context) error {
+	var (
+		cc  = echocustom.EchoGetCustomCtx(c)
+		ctx = cc.GetRequestCtx()
+		s   = servicesubpost.SubPost()
+		id  = cc.Get("id").(modelmg.AppID)
+	)
+
+	data, err := s.GetDetail(ctx, id)
 	if err != nil {
 		return cc.Response400(nil, err.Error())
 	}
